Fix dark mode

--- a/java-spring/src/main/resources/static/style.css
+++ b/java-spring/src/main/resources/static/style.css
@@ -5,12 +5,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 :root {
+    --color-text: black;
+    --color-text-secondary: gray;
     --color-background: white;
+    --color-container-background: lightgray;
+    --color-button-primary: green;
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --color-background: black;
+        --color-text: white;
+        --color-text-secondary: gray;
+        --color-background: rgb(31, 31, 31);
+        --color-container-background: lightgray;
+        --color-button-primary: green;
     }
 }
 
@@ -33,6 +41,7 @@ main {
     flex-direction: column;
     gap: 1rem;
     margin: 1rem;
+    color: var(--color-text);
 }
 
 #header #title {
@@ -50,7 +59,7 @@ main {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    border: 1px solid black;
+    border: 1px solid currentColor;
     border-radius: 1rem;
     padding: 1rem;
 }
@@ -90,7 +99,7 @@ main {
 }
 
 .post-container {
-    border: 1px solid black;
+    border: 1px solid currentColor;
     border-radius: 7.5px;
     padding: 1rem;
 }
@@ -101,7 +110,7 @@ main {
 }
 
 .reply-container {
-    border: 1px solid lightgray;
+    border: 1px solid var(--color-container-background);
     padding: 1rem;
     border-radius: 7.5px;
 }
@@ -110,7 +119,7 @@ main {
     margin-left: 1rem;
     margin-top: 0.5rem;
     padding: 1rem;
-    border: 1px solid black;
+    border: 1px solid currentColor;
     border-radius: 7.5px;
     display: flex;
     flex-direction: column;
@@ -140,7 +149,7 @@ main {
 
 .post-date,
 .reply-date {
-    color: gray;
+    color: var(--color-text-secondary);
 }
 
 button {
@@ -148,11 +157,11 @@ button {
     padding: 0.25rem 0.5rem 0.25rem 0.5rem;
     border-radius: 5px;
     cursor: pointer;
-    border: 1px solid black;
+    border: 1px solid currentColor;
     border-radius: 7.5px;
     align-self: flex-start; /* Prevent button from growing to full width of column-directed flex container. */
 }
 
 button.primary {
-    background-color: green;
+    background-color: var(--color-button-primary);
 }
